// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load rates button: pressed loading 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      Here be dragons
    </div>
    <button
      type="button"
    >
      Load Rates
    </button>
    <div>
      Loading
    </div>
  </div>
</div>
`;

exports[`Load rates button: pressed network error 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      Here be dragons
    </div>
    <button
      type="button"
    >
      Load Rates
    </button>
    <div
      class="modal-overlay"
    >
      <div
        class="modal-content"
      >
        <p>
          Error retrieving data
        </p>
        <button
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Load rates button: pressed show data 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      Here be dragons
    </div>
    <button
      type="button"
    >
      Load Rates
    </button>
    <table>
      <thead>
        <tr>
          <th>
            Currency
          </th>
          <th>
            Rate
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            EUR
          </td>
          <td>
            1.00000
          </td>
        </tr>
        <tr>
          <td>
            USD
          </td>
          <td>
            1.22640
          </td>
        </tr>
        <tr>
          <td>
            JPY
          </td>
          <td>
            133.49000
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
